Terminally-main-v1.6.26.21-Stable

--- a/Source code/ver.rc
+++ b/Source code/ver.rc
@@ -1,6 +1,6 @@
 1 VERSIONINFO
-FILEVERSION     1,6,18,21
-PRODUCTVERSION  1,6,18,21
+FILEVERSION     1,6,26,21
+PRODUCTVERSION  1,6,26,21
 BEGIN
   BLOCK "StringFileInfo"
   BEGIN
@@ -8,13 +8,13 @@ BEGIN
     BEGIN
       VALUE "Type", "A basic C++ Command-line Shell"
       VALUE "CompanyName", "Ahmed Amr"
-      VALUE "FileDescription", "VM"
-      VALUE "FileVersion", "1.6.18.21 Stable Release"
+      VALUE "FileDescription", "Terminally"
+      VALUE "FileVersion", "1.6.26.21 Stable Release"
       VALUE "InternalName", "Terminally"
       VALUE "LegalCopyright", "Ahmed Amr"
       VALUE "OriginalFilename", "Terminally.exe"
       VALUE "ProductName", "Terminally"
-      VALUE "ProductVersion", "1.6.18.21 Stable Release"
+      VALUE "ProductVersion", "1.6.26.21 Stable Release"
     END
   END
   BLOCK "VarFileInfo"
